--- a/client/app/index.html
+++ b/client/app/index.html
@@ -41,6 +41,8 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/users">Users</a></li>
+              <li><a ng-href="#/books">Books</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
@@ -88,6 +90,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/users.js"></script>
         <!-- endbuild -->
 </body>
 </html>
