--- a/client/app/index.html
+++ b/client/app/index.html
@@ -85,6 +85,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-ui-sortable/sortable.js"></script>
+    <script src="bower_components/ng-lodash/build/ng-lodash.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
