--- a/client/app/index.html
+++ b/client/app/index.html
@@ -56,7 +56,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        Blah
       </div>
     </div>
 
