moved About and Contact to the bottom, working delete button for Users

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -40,10 +40,8 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/users">Users</a></li>
               <li><a ng-href="#/books">Books</a></li>
-              <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -56,7 +54,8 @@
 
     <div class="footer">
       <div class="container">
-        Blah
+        <a ng-href="#/about">About</a>
+        <a ng-href="#/contact">Contact</a>
       </div>
     </div>
 
