--- a/client/app/index.html
+++ b/client/app/index.html
@@ -43,6 +43,12 @@
               <li><a ng-href="#/users">Users</a></li>
               <li><a ng-href="#/books">Books</a></li>
             </ul>
+
+            <ul class="nav navbar-right navbar-nav">
+              <li><a ng-href="#/user/signup" data-toggle="modal" data-target="#signModal">Sign Up</a></li>
+              <li><a ng-href="#/login">Log In</a></li>
+            </ul>
+
           </div>
         </div>
       </div>
@@ -58,7 +64,6 @@
         <a ng-href="#/contact">Contact</a>
       </div>
     </div>
-
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
