--- a/client/app/index.html
+++ b/client/app/index.html
@@ -46,7 +46,7 @@
 
             <ul class="nav navbar-right navbar-nav">
               <li><a ng-href="#/user/signup" data-toggle="modal" data-target="#signModal">Sign Up</a></li>
-              <li><a ng-href="#/login">Log In</a></li>
+              <li><a data-toggle="modal" data-target="#myModal" ng-href="#/login">Log In</a></li>
             </ul>
 
           </div>
@@ -71,7 +71,6 @@
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
