--- a/client/app/index.html
+++ b/client/app/index.html
@@ -61,8 +61,10 @@
     <div class="footer">
       <div class="container">
         <a ng-href="#/about">About</a>
-        <a ng-href="#/contact">Contact</a>
+        |
+        <a ng-hre="#/contact">Contact</a>
       </div>
+      <br>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -88,7 +90,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-ui-sortable/sortable.js"></script>
-    <script src="bower_components/ng-lodash/build/ng-lodash.min.js"></script>
+    <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
